File structure revamp, music and sound effect settings added