@@ -40,8 +40,10 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>21</version> </dependency>
+            <version>21</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <sourceDirectory>src</sourceDirectory>
@@ -52,7 +54,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>Tetris</mainClass>
+                    <mainClass>Frontend.Tetris</mainClass>
+
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
+
                 </configuration>
             </plugin>
         </plugins>
